// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin.filter filter 1`] = `
"export interface IFoo {
  foo: number;
}
export class Foo {
  foo() {
    ;
    console.log(\\"hi\\");
  }

}
;"
`;

exports[`plugin.local-context integrated.method 1`] = `
";
<Foo /> + function Test(this: Foo, a: number, b: string) {
  ;
  console.log(\\"hi\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
  console.log(\\"another\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
  return a.toString() + b;
};

function Snippet() {
  console.log(\\"hi\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
}

function AnotherSnippet() {
  console.log(\\"another\\");
  console.log(\\"nested\\");
  console.log(\\"deep\\");
}

function SnippetNested() {
  console.log(\\"nested\\");
  console.log(\\"deep\\");
}

function DeepSnippet() {
  console.log(\\"deep\\");
}"
`;

exports[`plugin.local-context transcribe.integrated.export-function 1`] = `
"export function Test(a: number, b: string) {
  ;
  console.log(\\"export function\\");
  return a.toString() + b;
}

function Snippet() {
  console.log(\\"export function\\");
}"
`;

exports[`plugin.local-context transcribe.nested 1`] = `
";
<Foo /> + function Test(this: Foo, a: number, b: string) {
  ;
  console.log(\\"hi\\");
  console.log(\\"nested\\");
  return a.toString() + b;
};

function Snippet() {
  console.log(\\"hi\\");
  console.log(\\"nested\\");
}

function SnippetNested() {
  console.log(\\"nested\\");
}"
`;

exports[`plugin.local-context transcribe.simple 1`] = `
";
<Foo /> + function Test(this: Foo, a: number, b: string) {
  ;
  console.log(\\"hi\\");
  return a.toString() + b;
};

function Snippet() {
  console.log(\\"hi\\");
}"
`;
